<resources>
    <string name="app_name">PicExplorer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
</resources>